# payment-aggregator

./: .gitignore  flow.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: df85e8681079_.py  fc5c0d719a87_users_auth.py  fe0d08bb7444_initial_migration.py
app/: main.py
app/core/: config.py  database.py  dependencies.py  security.py
app/projects/: crud.py  models.py  routes.py  schema.py
app/users/: crud.py  models.py  routes.py  schema.py
