[project]
name = "payment-aggregator"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi>=0.118.0",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.11.0",
    "ruff>=0.13.2",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
]
